--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-        /* Optional: Add a smooth scroll effect */
-        html {
-            scroll-behavior: smooth;
-        }
-
-        /* Set font family for better consistency */
+        /* Set default font family for consistency */
         body {
             font-family: 'Poppins', sans-serif;
+        }
+
+        /* Set a smooth scroll effect */
+        html {
+            scroll-behavior: smooth;
         }
     </style>
 </head>
@@ -194,7 +194,7 @@
                 <div class="row g-4">
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/5E80F3/FFFFFF?text=Smart+Watch" class="card-img-top p-3">
+                            <img src="https://via.placeholder.com/300x250/5E80F3/FFFFFF?text=Smart+Watch" class="card-img-top p-3" alt="Smart Watch">
                             <div class="card-body text-center">
                                 <h6 class="card-title fw-semibold">Smart Watch</h6>
                                 <p class="text-success fw-bold fs-5">৳ 2,500</p>
@@ -205,7 +205,7 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/F35E6D/FFFFFF?text=Gaming+Headset" class="card-img-top p-3">
+                            <img src="https://via.placeholder.com/300x250/F35E6D/FFFFFF?text=Gaming+Headset" class="card-img-top p-3" alt="Gaming Headset">
                             <div class="card-body text-center">
                                 <h6 class="card-title fw-semibold">Gaming Headset</h6>
                                 <p class="text-success fw-bold fs-5">৳ 3,200</p>
@@ -216,7 +216,7 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/5EF381/FFFFFF?text=Power+Bank" class="card-img-top p-3">
+                            <img src="https://via.placeholder.com/300x250/5EF381/FFFFFF?text=Power+Bank" class="card-img-top p-3" alt="Power Bank">
                             <div class="card-body text-center">
                                 <h6 class="card-title fw-semibold">Power Bank</h6>
                                 <p class="text-success fw-bold fs-5">৳ 1,500</p>
@@ -227,7 +227,7 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/F3C15E/FFFFFF?text=Bluetooth+Speaker" class="card-img-top p-3">
+                            <img src="https://via.placeholder.com/300x250/F3C15E/FFFFFF?text=Bluetooth+Speaker" class="card-img-top p-3" alt="Bluetooth Speaker">
                             <div class="card-body text-center">
                                 <h6 class="card-title fw-semibold">Bluetooth Speaker</h6>
                                 <p class="text-success fw-bold fs-5">৳ 1,999</p>
@@ -257,7 +257,7 @@
                 <div class="row g-4">
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/F35E6D/FFFFFF?text=Wireless+Earbuds" class="card-img-top p-3">
+                            <img src="https://via.placeholder.com/300x250/F35E6D/FFFFFF?text=Wireless+Earbuds" class="card-img-top p-3" alt="Wireless Earbuds">
                             <div class="card-body text-center">
                                 <h6 class="card-title fw-semibold">Wireless Earbuds</h6>
                                 <p class="text-success fw-bold fs-5">৳ 1,800</p>
@@ -268,7 +268,7 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/5E80F3/FFFFFF?text=Mechanical+Keyboard" class="card-img-top p-3">
+                            <img src="https://via.placeholder.com/300x250/5E80F3/FFFFFF?text=Mechanical+Keyboard" class="card-img-top p-3" alt="Mechanical Keyboard">
                             <div class="card-body text-center">
                                 <h6 class="card-title fw-semibold">Mechanical Keyboard</h6>
                                 <p class="text-success fw-bold fs-5">৳ 4,500</p>
