add some products

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to MyShop</title>
 
+    <link rel="icon" type="image/x-icon" href="assets/media/images/logo.jpg">
+
     <link rel="stylesheet" href="assets/all.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -31,7 +33,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3 sticky-top shadow">
             <div class="container">
 
-                <a class="navbar-brand fw-bold" href="#">MyShop</a>
+                <a class="navbar-brand fw-bold" href="index.html">NexTech Horizon</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -68,11 +70,10 @@
 
                         <li class="nav-item">
                             <a class="nav-link position-relative" href="#">
-                                Cart 🛒
                                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                    3
-                                    <span class="visually-hidden">items in cart</span>
+                                    0
                                 </span>
+                                <i class="fa-solid fa-cart-shopping"></i>
                             </a>
                         </li>
                     </ul>
@@ -94,7 +95,7 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img src="assets/media/images/bg.jpg" class="d-block w-100" alt="Big Sale 50% Off Banner">
+                    <img src="assets/media/images/banner-01.jpeg" class="d-block w-100" alt="Big Sale 50% Off Banner">
                     <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 p-3 rounded">
                         <h1 class="fw-bold">Big Sale 50% Off</h1>
                         <p>Latest gadgets at best price</p>
@@ -103,7 +104,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="assets/media/images/Cute-anime-cat-wallpaper-displaying-fun-interactions-among-feline-friends.jpg" class="d-block w-100" alt="New Arrivals Banner">
+                    <img src="assets/media/images/banner-02.jpeg" class="d-block w-100" alt="New Arrivals Banner">
                     <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 p-3 rounded">
                         <h1 class="fw-bold">New Arrivals</h1>
                         <p>Fresh products just for you</p>
@@ -112,7 +113,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="assets/media/images/Desktop-wallpaper-anime-cat-lovers-full-of-cheerful-and-lively-cats.jpg" class="d-block w-100" alt="Fast Delivery Banner">
+                    <img src="assets/media/images/banner-03.jpeg" class="d-block w-100" alt="Fast Delivery Banner">
                     <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 p-3 rounded">
                         <h1 class="fw-bold">Fast Delivery</h1>
                         <p>All over Bangladesh</p>
@@ -143,9 +144,9 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card text-center shadow-sm h-100 border-0">
-                            <img src="https://via.placeholder.com/300x200/5E80F3/FFFFFF?text=Mobile" class="card-img-top p-3" alt="Mobile">
+                            <img src="assets/media/images/trimer.jpg" class="card-img-top p-3" alt="Mobile">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Mobiles</h5>
+                                <h5 class="card-title fw-semibold">Trimmer</h5>
                                 <a href="#" class="btn btn-outline-primary btn-sm mt-2">View Products</a>
                             </div>
                         </div>
@@ -153,9 +154,9 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card text-center shadow-sm h-100 border-0">
-                            <img src="https://via.placeholder.com/300x200/F35E6D/FFFFFF?text=Laptop" class="card-img-top p-3" alt="Laptop">
+                            <img src="assets/media/images/sm-watch.jpg" class="card-img-top p-3" alt="Laptop">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Laptops</h5>
+                                <h5 class="card-title fw-semibold">Smart Watch</h5>
                                 <a href="#" class="btn btn-outline-primary btn-sm mt-2">View Products</a>
                             </div>
                         </div>
@@ -163,9 +164,9 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card text-center shadow-sm h-100 border-0">
-                            <img src="https://via.placeholder.com/300x200/5EF381/FFFFFF?text=Accessories" class="card-img-top p-3" alt="Accessories">
+                            <img src="assets/media/images/hoco-head-band.jpg" class="card-img-top p-3" alt="Accessories">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Accessories</h5>
+                                <h5 class="card-title fw-semibold">Headband</h5>
                                 <a href="#" class="btn btn-outline-primary btn-sm mt-2">View Products</a>
                             </div>
                         </div>
@@ -173,9 +174,9 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card text-center shadow-sm h-100 border-0">
-                            <img src="https://via.placeholder.com/300x200/F3C15E/FFFFFF?text=Fashion" class="card-img-top p-3" alt="Fashion">
+                            <img src="assets/media/images/mouse.jpg" class="card-img-top p-3" alt="Fashion">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Fashion</h5>
+                                <h5 class="card-title fw-semibold">Mouse</h5>
                                 <a href="#" class="btn btn-outline-primary btn-sm mt-2">View Products</a>
                             </div>
                         </div>
@@ -194,9 +195,9 @@
                 <div class="row g-4">
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/5E80F3/FFFFFF?text=Smart+Watch" class="card-img-top p-3" alt="Smart Watch">
+                            <img src="assets/media/images/1000030427-600x600.jpg" class="card-img-top p-3" alt="Smart Watch">
                             <div class="card-body text-center">
-                                <h6 class="card-title fw-semibold">Smart Watch</h6>
+                                <h6 class="card-title fw-semibold">Hoco TWS</h6>
                                 <p class="text-success fw-bold fs-5">৳ 2,500</p>
                                 <a href="#" class="btn btn-dark btn-sm">Add to Cart</a>
                             </div>
@@ -205,9 +206,9 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/F35E6D/FFFFFF?text=Gaming+Headset" class="card-img-top p-3" alt="Gaming Headset">
+                            <img src="assets/media/images/27692-148x148.jpg" class="card-img-top p-3" alt="Gaming Headset">
                             <div class="card-body text-center">
-                                <h6 class="card-title fw-semibold">Gaming Headset</h6>
+                                <h6 class="card-title fw-semibold">Gaming TWS</h6>
                                 <p class="text-success fw-bold fs-5">৳ 3,200</p>
                                 <a href="#" class="btn btn-dark btn-sm">Add to Cart</a>
                             </div>
@@ -216,9 +217,9 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/5EF381/FFFFFF?text=Power+Bank" class="card-img-top p-3" alt="Power Bank">
+                            <img src="assets/media/images/27695.jpg" class="card-img-top p-3" alt="Power Bank">
                             <div class="card-body text-center">
-                                <h6 class="card-title fw-semibold">Power Bank</h6>
+                                <h6 class="card-title fw-semibold">TWS with display</h6>
                                 <p class="text-success fw-bold fs-5">৳ 1,500</p>
                                 <a href="#" class="btn btn-dark btn-sm">Add to Cart</a>
                             </div>
@@ -227,9 +228,9 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/F3C15E/FFFFFF?text=Bluetooth+Speaker" class="card-img-top p-3" alt="Bluetooth Speaker">
+                            <img src="assets/media/images/hocco.jpg" class="card-img-top p-3" alt="Bluetooth Speaker">
                             <div class="card-body text-center">
-                                <h6 class="card-title fw-semibold">Bluetooth Speaker</h6>
+                                <h6 class="card-title fw-semibold">Headphone</h6>
                                 <p class="text-success fw-bold fs-5">৳ 1,999</p>
                                 <a href="#" class="btn btn-dark btn-sm">Add to Cart</a>
                             </div>
@@ -241,7 +242,7 @@
         </section>
         <section class="py-5 bg-dark text-white text-center">
             <div class="container">
-                <h2 class="fw-bold mb-3">🔥 Mega Sale 50% OFF</h2>
+                <h2 class="fw-bold mb-3">Mega Sale 50% OFF</h2>
                 <p class="lead">Limited time offer. Don't miss out on the best deals!</p>
                 <a href="#shop-section" class="btn btn-warning btn-lg px-5 mt-3">Shop Now</a>
             </div>
@@ -257,9 +258,9 @@
                 <div class="row g-4">
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/F35E6D/FFFFFF?text=Wireless+Earbuds" class="card-img-top p-3" alt="Wireless Earbuds">
+                            <img src="assets/media/images/basus-powerbank.jpg" class="card-img-top p-3" alt="Wireless Earbuds">
                             <div class="card-body text-center">
-                                <h6 class="card-title fw-semibold">Wireless Earbuds</h6>
+                                <h6 class="card-title fw-semibold">Basus Powerbank</h6>
                                 <p class="text-success fw-bold fs-5">৳ 1,800</p>
                                 <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
                             </div>
@@ -268,9 +269,29 @@
 
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="https://via.placeholder.com/300x250/5E80F3/FFFFFF?text=Mechanical+Keyboard" class="card-img-top p-3" alt="Mechanical Keyboard">
+                            <img src="assets/media/images/hoco-head-band.jpg" class="card-img-top p-3" alt="Mechanical Keyboard">
                             <div class="card-body text-center">
-                                <h6 class="card-title fw-semibold">Mechanical Keyboard</h6>
+                                <h6 class="card-title fw-semibold">Desktop Light</h6>
+                                <p class="text-success fw-bold fs-5">৳ 4,500</p>
+                                <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <div class="card h-100 shadow-sm border-0">
+                            <img src="assets/media/images/watch.jpg" class="card-img-top p-3" alt="Mechanical Keyboard">
+                            <div class="card-body text-center">
+                                <h6 class="card-title fw-semibold">Desktop Light</h6>
+                                <p class="text-success fw-bold fs-5">৳ 4,500</p>
+                                <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <div class="card h-100 shadow-sm border-0">
+                            <img src="assets/media/images/mini-light.jpg" class="card-img-top p-3" alt="Mechanical Keyboard">
+                            <div class="card-body text-center">
+                                <h6 class="card-title fw-semibold">Basus Mini Light</h6>
                                 <p class="text-success fw-bold fs-5">৳ 4,500</p>
                                 <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
                             </div>
