--- a/index.html
+++ b/index.html
@@ -352,7 +352,10 @@
 
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold">MyShop</h5>
-                    <p class="text-muted">Your trusted online shop for the latest gadgets and accessories.</p>
+                    <p>Welcome to NexTech Horizon!
+                        Thank you for reaching out to us!
+                        We are a trusted online gadget shop offering the latest tech products with best price.For more Details Contact us: 01643-126130.
+                    </p>
                 </div>
 
                 <div class="col-md-4 mb-4">
@@ -368,18 +371,18 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold">Contact</h5>
                     <p><i class="fas fa-phone-alt me-2"></i>Phone: 01643-126130</p>
-                    <p><i class="fas fa-envelope me-2"></i>Email: support@myshop.com</p>
+                    <p><i class="fas fa-envelope me-2"></i>Email: sayimcr7@gmail.com</p>
                     <div class="fs-4 mt-3">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/NexTechHorizon " target="_blank" class="text-white me-3"><i class="fab fa-facebook"></i></a>
+                        <a href="https://bd.linkedin.com/in/sayim007" target="_blank" class="text-white me-3"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/nextechhorizon/" target="_blank" class="text-white"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
 
             </div>
-
+            
             <hr class="text-secondary">
-            <p class="text-center mb-0 text-muted">© 2025 MyShop. All rights reserved.</p>
+            <p class="text-center mt-3">© 2025 NexTech Horizon. All rights reserved.</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
