--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
 
                         <li class="nav-item">
-                            <a class="nav-link position-relative" href="#">
+                            <a class="nav-link position-relative" href="cart.html">
                                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                                     0
                                 </span>
@@ -386,6 +386,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="assets/all.js"></script>
 
 </body>
 </html>
